--- a/11_2020/20201109-TIL.md
+++ b/11_2020/20201109-TIL.md
@@ -1,109 +1,94 @@
-# 오늘 공부할 내용
+- # 오늘 공부할 내용
 
-- 스프링 수업 준비
-- DB복습 (COUNT부터 이어서)
-- 스프링 수업 복습
-- TiL 정리 및 Git & 블로그 업데이트
+  - 스프링 수업 준비
+  - DB복습 (COUNT부터 이어서)
+  - 스프링 수업 복습
+  - TiL 정리 및 Git & 블로그 업데이트
 
+  # 오늘 공부한 것 & 배운 내용
 
+  - 통학길 
 
+    -  비전공 취업글 읽기
+       - 글을 읽으면서 중간에 링크가 있으면 링크에 있는 글을 모두 읽는 식으로 자료를 읽다보니 자료의 일관성이 떨어져서 아쉬움이 남는다. 어떻게 하면 전체적인 글과 참조된 글을 조화롭게 읽을지 고민해봐야될 것 같다
+       - 개발자 커뮤니티 중에 페이스북 커뮤니티가 큰것을 발견하고 나도 온라인으로 부터 시작해서 네트워킹을 시작해야될 필요성을 느끼고 페이스북을 가입해야겠다고 생각했다
+       - 컴퓨터 공학 기초 공부하는 방법중에 대학 공개 강의를 통해서 하는 방법에 대해서 소개된 글이 있었는데 좋은 방법인 것 같다. 책이 가장 현실적으로 시간과 비용이 적게들어가겠지만 하다가 도저히 이해안되는 부분이 있다면 대학강의를 활용하는 방법도 생각해봐야겠다
+         - cs50.havard.edu 도 많이 추천되는 대학강의였다
+       - 자료의 바다를 헤엄치다보니 깃허브에 자료가 잘정리되어 있는 페이지가 많다는 것을 발견하였다
+         - 코드를 통해서도 오픈소스 참여할 수 있지만 이런 식으로도 오픈소스 참여할 수 있다는 것을 배웠다
+       - 자료구조와 알고리즘을 더 잘할 수록 더 고급 개발자가 될 수 있다는 글을 보았는데 자료구조와 알고리즘을 단순히 취업목적이 아니라 더 나은 목적을 가지고 접근할수있게 해주는것 같아 도움이 됬다
 
+  - 준비시간 
 
-# 오늘 공부한 것 & 배운 내용
+    -  채용 공고 읽기
 
-- 통학길 
-  -  비전공 취업글 읽기
-    - 글을 읽으면서 중간에 링크가 있으면 링크에 있는 글을 모두 읽는 식으로 자료를 읽다보니 자료의 일관성이 떨어져서 아쉬움이 남는다. 어떻게 하면 전체적인 글과 참조된 글을 조화롭게 읽을지 고민해봐야될 것 같다
-    - 개발자 커뮤니티 중에 페이스북 커뮤니티가 큰것을 발견하고 나도 온라인으로 부터 시작해서 네트워킹을 시작해야될 필요성을 느끼고 페이스북을 가입해야겠다고 생각했다
-    - 컴퓨터 공학 기초 공부하는 방법중에 대학 공개 강의를 통해서 하는 방법에 대해서 소개된 글이 있었는데 좋은 방법인 것 같다. 책이 가장 현실적으로 시간과 비용이 적게들어가겠지만 하다가 도저히 이해안되는 부분이 있다면 대학강의를 활용하는 방법도 생각해봐야겠다
-      - cs50.havard.edu 도 많이 추천되는 대학가의였다
-    - 자료의 바다를 헤엄치다보니 깃허브에 자료가 잘정리되어 있는 페이지가 많다는 것을 발견하였다
-      - 코드를 통해서도 오픈소스 참여할 수 있지만 이런 식으로도 오픈소스 참여할 수 있다는 것을 배웠다
-    - 자료구조와 알고리즘을 더 잘할 수록 더 고급 개발자가 될 수 있다는 글을 보았는데 자료구조와 알고리즘을 단순히 취업목적이 아니라 더 나은 목적을 가지고 접근할수있게 해주는것 같아 도움이 됬다
+       - 오늘은 깃헙페이지 중 주니어 개발자 추천 채용정보를 봤는데 괜찮은 기업들 위주로 정리되어 있어 여기를 목표로 하고 차선책으로 여기와 비슷한 규모나 채용공고를 가진곳을 찾으면 좋은 회사 찾는데 도움이 될 것 같다
+         - 거기 있는 글 중 회사 선택기준 중에 개발자 5명이상, MAU(Monthly Active User가 10만에서 50만사이라는 기준들이 있었는데 참고할만한 좋은 기준인 것 같다.
+           - MAU를 어떻게 확인하는지도 알수 있으면 더 도움이 될 것 같다
 
-- 준비시간 
+    - 네트워크 책읽기
 
-  -  채용 공고 읽기
-
-    - 오늘은 깃헙페이지 중 주니어 개발자 추천 채용정보를 봤는데 괜찮은 기업들 위주로 정리되어 있어 여기를 목표로 하고 차선책으로 여기와 비슷한 규모나 채용공고를 가진곳을 찾으면 좋은 회사 찾는데 도움이 될 것 같다
-      - 거기있는 글중 회사 선택기준 중에 개발자 5명이상, MAU(Monthly Active User)가 10만에서 50만사이라는 기준들이 있었는데 참고할만한 좋은 기준인 것 같다.
-        - MAU를 어떻게 확인하는지도 알수 있으면 더 도움이 될 것 같다
-
-  - 네트워크 책읽기
-
-  - 어제 TIL읽고 오늘 TIL 기초잡기
-
-    
-
-- 오전 공부시간
-
-  - 스프링 예습	
-    - 오늘 부터 스프링 수업이 시작되기 때문에 수업들을 준비를 하고 싶었는데 어떻게 할까 고민하다가 수업 계획표를 보고 거기 있는 키워드들을 미리 좀 정리해보는 것으로 하기로 결정하였다
+    - 어제 TIL 읽고 오늘 TIL 기초 잡기
 
       
 
-    - 키워드
+  - 오전 공부시간
 
-      - J2EE : J2EE = JAVA EE = JEE 와 같은 용어, Java Enterpirse Edition으로 기업용 네트워크 어플리케이션을 위해 고안되었다
-      - HTML프롴토콜 (생활코딩 강좌 돌려봄)
-        - 클라이언트에서 보내는 Request Message와 서버에서 응답하는 Response Message로 구분된다
-          - Response Message에 포함되는 status code는 통신의 결과를 요약해서 나타낸다
-            - 1xx Informational response
-            - 2xx Sucess(Positive)
-            - 3xx Redirection -> 다른 웹페이지로 으로 이동시킴
-            - 4xx Clent error 
-            - 5xx ServerErro 
-        - 각각은 일정한 형식을 가지고 있는 Headr와 내용을 담고 있는 Body로 이루어져있다(둘은 balnk LIne으로 구분한다)
-        - 통신방식은 서버로부터 정보를 가져오는 Get방식과 서버로 정보를 보낼때 사용하는 Post 방식이 있다
-      - WAS(Web Application Server)
-        - 동적인 컨텐츠를 제공하기 위한 application server
-          - 웹 컨테이너 혹은 서블릿 컨테이너라고도 불린다
-            - 컨테이너는 JSP, Sevelet을 실행시킬수 있는 소프트웨어를 말한다
-            - 즉 WAS는 JSP, Servlet 구동 환경을 제공한다.
-        - WAS의 역할
-          - WAS = Web Server + WebContainer
-        - WAs 종류 
-          - Tomact, Jboss, Jeus, Web Sphere 등 이 있다
-        - WebServer와 WAS 기능 분리이유
-          - 기능을 분리하여 서버 부하를 방지한다
-            - WAS는 다양한 로직처리로 바쁘기 때문에 단순한 정적컨텐츠는 Webserver로 처리한다
-        - 참고자료 : https://gmlwjd9405.github.io/2018/10/27/webserver-vs-was.html
-          - 나중에 필요하다면 동작과정도 자세히 나아있으니 참고
-      - Servelt Container
-        - Sevelt의 구동환경, servlet을 생성하고 관리하는 곳
+    - 스프링 예습	
 
-    - 질문점
+      - 오늘 부터 스프링 수업이 시작되기 때문에 수업들을 준비를 하고 싶었는데 어떻게 할까 고민하다가 수업 계획표를 보고 거기 있는 키워드들을 미리 좀 정리해보는 것으로 하기로 결정하였다
 
-      - Spring에서는 JSP와 Sevlet을 모두 사용하는 것인가?
-        - 아마도 그런것 같긴한데 확실히 알면좋을 것 같다
-      - Spring container와 Servlet Container는 다른 것인가?
-      - Servlet Container에서 Severlet을 통해 동적 웹페이지를 만들어 WebSever에 보내는 것인가?
+      - 키워드
 
-      
+        - J2EE : J2EE = JAVA EE = JEE 와 같은 용어, Java Enterpirse Edition으로 기업용 네트워크 어플리케이션을 위해 고안되었다
+        - HTML프로토콜 (생활코딩 강좌 돌려봄)
+          - 클라이언트에서 보내는 Request Message와 서버에서 응답하는 Response Message로 구분된다
+            - Response Message에 포함되는 status code는 통신의 결과를 요약해서 나타낸다
+              - 1xx Informational response
+              - 2xx Sucess(Positive)
+              - 3xx Redirection -> 다른 웹페이지로 으로 이동시킴
+              - 4xx Clent error 
+              - 5xx ServerErro 
+          - 각각은 일정한 형식을 가지고 있는 Heder와 내용을 담고 있는 Body로 이루어져있다(둘은 balnk LIne으로 구분한다)
+          - 통신방식은 서버로부터 정보를 가져오는 Get방식과 서버로 정보를 보낼때 사용하는 Post 방식이 있다
+        - WAS(Web Application Server)
+          - 동적인 컨텐츠를 제공하기 위한 application server
+            - 웹 컨테이너 혹은 서블릿 컨테이너라고도 불린다
+              - 컨테이너는 JSP, Sevelet을 실행시킬수 있는 소프트웨어를 말한다
+              - 즉 WAS는 JSP, Servlet 구동 환경을 제공한다.
+          - WAS의 역할
+            - WAS = Web Server + WebContainer
+          - WAS 종류 
+            - Tomact, Jboss, Jeus, Web Sphere 등 이 있다
+          - WebServer와 WAS 기능 분리이유
+            - 기능을 분리하여 서버 부하를 방지한다
+              - WAS는 다양한 로직처리로 바쁘기 때문에 단순한 정적컨텐츠는 Webserver로 처리한다
+          - 참고자료 : https://gmlwjd9405.github.io/2018/10/27/webserver-vs-was.html
+            - 나중에 필요하다면 동작과정도 자세히 나와 있으니 참고
+        - Servelt Container
+          - Sevelt의 구동환경, servlet을 생성하고 관리하는 곳
 
-    - 느낀점
+      - 질문점
 
-      - 첫날이라 예습을 할 수 있었지만 내일부터는 복습하느라 정신없을 것 같긴하다. 그래도 이렇게 키워드라도 찾아보고 수업을 들으면 더 활용하기 좋으니 이해할 수 있으니 키워드라도 찾아보는 시간 갖도록 노력해보자
-        - 키워드는 자세한 내용보다는 키워드 자체에 조금이라도 익숙해지자는 목표를 가지고 공부하면 더 목적 적합할것 같다
+        - Spring에서는 JSP와 Sevlet을 모두 사용하는 것인가?
+          - 아마도 그런것 같긴한데 확실히 알면 좋을 것 같다
+        - Spring container와 Servlet Container는 다른 것인가?
+        - Servlet Container에서 Severlet을 통해 동적 웹페이지를 만들어 WebSever에 보내는 것인가?
 
+      - 느낀점
 
+        - 첫날이라 예습을 할 수 있었지만 내일부터는 복습하느라 정신없을 것 같긴하다. 그래도 이렇게 키워드라도 찾아보고 수업을 들으면 더 활용하기 좋으니 이해할 수 있으니 키워드라도 찾아보는 시간 갖도록 노력해보자
+          - 키워드는 자세한 내용보다는 키워드 자체에 조금이라도 익숙해지자는 목표를 가지고 공부하면 더 목적 적합할것 같다
 
-- 오후 스프링 수업
-  - 수업이 생각보다 많이 실망스러웠다. 여러 개념들을 말씀하셨는데 설명은 적고 공부는 혼자해오라고 자료만 던져주신다.. 발음은 안좋으셔서 잘알아 듣기 어려운데 자꾸 알아들었냐고 되물어서 부담스러워서 질문도 잘 못하겠다.. 사실 어떤 설명에 맥락이 있어야 그 중에 모르는 부분을 질문하는데 맥락을 안주시고 단편적인 정보만 자꾸 던져주신다.. 심지어 예제 진행하시다가 설정이 잘못되서 한시간넘게 해결을 못하셔서 멍하니 앉아있었는데 앞길이 깜깜하다
-    - 매니저에게 이런부분얘기하고 건의하긴했는데 어떻게 달라질지 모르겠다.. 앞으로 계획을 다시 짜봐야될 것 같다
+  - 오후 스프링 수업
+    - 수업이 생각보다 많이 실망스러웠다. 여러 개념들을 말씀하셨는데 설명은 적고 공부는 혼자해오라고 자료만 던져주신다.. 발음은 안좋으셔서 잘알아 듣기 어려운데 자꾸 알아들었냐고 되물어서 부담스러워서 질문도 잘 못하겠다.. 사실 어떤 설명에 맥락이 있어야 그 중에 모르는 부분을 질문하는데 맥락을 안주시고 단편적인 정보만 자꾸 던져주신다.. 심지어 예제 진행하시다가 설정이 잘못되서 한시간넘게 해결을 못하셔서 멍하니 앉아있었는데 앞길이 깜깜하다
+      - 매니저에게 이런부분얘기하고 건의하긴했는데 어떻게 달라질지 모르겠다.. 앞으로 계획을 다시 짜봐야될 것 같다
 
+  
 
+  # 내일 공부할 내용
 
-# 내일 공부할 내용
-
-- jsp강의?
-- http 공부
-- jsp, sevelt 내용보충
-- TiL 정리 및 Git & 블로그 업데이트
-
-
-
-
-
-
-
+  - jsp강의?
+  - http 공부
+  - jsp, sevelt 내용보충
+  - TiL 정리 및 Git & 블로그 업데이트
