--- a/TIL/11_2020/20201111-TIL.md
+++ b/TIL/11_2020/20201111-TIL.md
@@ -16,7 +16,7 @@
 
   - TIL정리를 어떻게 해야되는지 다시 생각해보게 해주었다
 
-  - repo별로 코드나 결과물들은 정리해두되 정리한글은 위의 예제 같이 주제별로 정리해서 reame를 통해 내용을 요약해서 보여주는게 효과적일 것 같다
+  - repo별로 코드나 결과물들은 정리해두되 정리한글은 위의 예제 같이 주제별로 정리해서 readme를 통해 내용을 요약해서 보여주는게 효과적일 것 같다
 
     - TIL 다시정리하기!
 
@@ -27,17 +27,17 @@
 - 비전공자 취업 가이드 마무리
 
   - 본문에서 링크해주신 좋은 글들을 이미 많이 읽어서 뒤에 내용들이 겹치는게 많아서 빠르게 읽어보면서 마무리하였다
-  - 개발 공부는 혼자하는 것이 아닌 온 오프라인을 통해 활발한 활동을 하면서 더 나은 방법으로 공부하고 네트워킹을 해나가는 것이 앞으로 커리어에 도움이 많이 된다는것을 배웠다
+  - 개발 공부는 혼자 하는 것이 아닌 온 오프라인을 통해 활발한 활동을 하면서 더 나은 방법으로 공부하고 네트워킹을 해나가는 것이 앞으로 커리어에 도움이 많이 된다는 것을 배웠다
   - 또 여러 공부방법론과 다양한 사례들을 접할 수 있었는데 너무 다양해서 하나로 정리하긴 어렵지만 필요한 부분에 대해서는 정리할 수 있었다
-    - OS및 네트워크 기본 지식
-    - 자료구조/알고리즘에 대한 이해와 문제풀이
+    - OS 및 네트워크 기본 지식
+    - 자료 구조/알고리즘에 대한 이해와 문제풀이
     - DB관련 지식
-    - 하나의 언어에 대한 깊은이해
+    - 하나의 언어에 대한 깊은 이해
       - 토이프로젝트
     - MVC패턴 활용한 스프링/스프링부터 활용
     - 포트폴리오
   - 앞으로 어떤자료로 통학길 채울지는 또 고민해봐야겠다 
-    - 개발자료로 채울지 아니면 독서시간으로 채워서 좀 휴식시간을 가질지 고민 중이다
+    - 개발자료로 채울지 아니면 독서 시간으로 채워서 좀 휴식시간을 가질지 고민 중이다
 
 
 
@@ -45,7 +45,7 @@
   - 캡슐화와 역캡슐화에 대해 읽고 표로 과정을 정리해 보았다
   - 오후 공부시작전 캡슐화와 역캡슐화 테스트를 하고 보충하였다
   - 저녁 공부시작전 OSI 모델 7계층 표로그려서 써보았다
-    - 생각해보니 각기능의 기능도 이해하지 않고 무조건 이름만 외우려고 했다, 좋지않은 접근법이고 이해한 이후 암기가 되어야 의미가 있는것 같다
+    - 생각해보니 각 기능의 기능도 이해하지 않고 무조건 이름만 외우려고 했다, 좋지않은 접근법이고 이해한 이후 암기가 되어야 의미가 있는것 같다
 
 
 
@@ -65,9 +65,17 @@
     - 먼저 생각나는대로 정리하고 강의안 보고 정리하였는데 *이것보다* 강의안으로 어느정도 정리해놓고 퀴즈를 보는게 더 효과적일 것 같다
       - 너무 중복된 내용이 많아져서 공부가 지루해지는 것 같다
   - 서블릿 부분도 강의안과 보충한 내용을 가지고 내용  정리를 진행하였다
-    - 서블릿은 Java의 객체이기 때문에 오히려 다가가기가 쉽다. 특히 앞에 HTTP부분을 공부하고 그에 대응하기 위한 
+    - 서블릿은 Java의 객체이기 때문에 오히려 이해하기 편한 것 같다. 앞에서 HTTP를 공부했기 때문에 이해하는데 도움이 된것 같다
 
+- TIL repo정리
 
+  - 아침에 본 예시처럼 TIL repo를 정리하였다. 수업노트는 원래 페이지에 넣고 그것을 복습하면서 깔끔히 정리한것만 TIL폴더에 담아서 이렇게 올리면 될것 같다
+    
+- 어느정도 정리가 된것 같아서 기분이 좋다 -> 굿!
+    
+  - https://github.com/FoeverNa/TIL
+  
+    
 
 
 
@@ -83,15 +91,16 @@
 
 - 스프링 강의 듣고 싶은데 복습해야되는게 많다.. 그리고 복습이 단순히 수업내용 적는게 아니라 모르는용어 찾아보고 정리해서 쓰다보면 시간이 오래걸린다. 이런 답답함을 어떻게 해야될지 모르겠다
 
-- 음
-
 
 
 
 
 # 내일 공부할 내용
 
-- 
+- DB복습
+- Java 보강
+- Srping 입문 강의(첨부터 들어보기)
+- TiL 정리 및 Git & 블로그 업데이트
 
 
 
