--- a/TIL/11_2020/20201112-TIL.md
+++ b/TIL/11_2020/20201112-TIL.md
@@ -37,14 +37,14 @@
       - 연습량 : 전문성은 자동으로 획득되지 않는다. 연습량이 가장 중요하다
       - 업무량과 연습량은 다르다 == 업무외에 시간에 연습할 시간이 필요하다
         - 재즈 기타리스트의 경우 공연시간과 실력이 상관없고 지하실에서 혼자 연습한 시간은 유의미 했다
-        - 체스 선수에서 토너먼트에서 경기를 치룬시간은 상관없고, 혼자 복기하거나 연습한것은 유믜이 했다
+        - 체스 선수에서 토너먼트에서 경기를 치룬시간은 상관없고, 혼자 복기하거나 연습한것은 유의미 했다
 
   - 참고자료 :https://github.com/Gyubin/TIL/blob/master/ETC/how_to_study_programming.md
 
     
 
 - 모두의 네트워크
-  - 어떻게 공부할 것인가 강의 내용을 듣고 전체적인 내용보기 위해서 목차를 봤더니 OSI 모델을 자세히 설명해 놓은 것들이 다음장들에 있었다.. 계속 어떻게든 외우려고 했었는데 그럴필요가 없었던 것이다.. 앞으론느 목차를 먼저 확인하고 공부할 내용들을 먼저 살펴본뒤에 공부에 들어가야될 것 같다
+  - 어떻게 공부할 것인가 강의 내용을 듣고 전체적인 내용보기 위해서 목차를 봤더니 OSI 모델을 자세히 설명해 놓은 것들이 다음장들에 있었다.. 계속 어떻게든 외우려고 했었는데 그럴필요가 없었던 것이다.. 앞으로는 목차를 먼저 확인하고 공부할 내용들을 먼저 살펴본뒤에 공부에 들어가야될 것 같다
   
   - ch2 보강(vpn) 및 테스트와 용어정리 부분을 진행하였다
   
@@ -58,10 +58,9 @@
   - 용어정리
     - O2O : Online to offline에 줄임말, 소매점과 이커머스가 연결된 형태, 온라인에서 정보를 얻고 오프라인에서 구매를 하거나 오프라인에서 정보를 얻고 온라인에서 구매를 하는 형태
     - https://en.wikipedia.org/wiki/Online_to_offline#:~:text=Online%20to%20offline%2C%20commonly%20abbreviated,or%20services%20from%20physical%20businesses.
-  - 그외
     
   - 포트폴리오를 pdf 형태로 요구하는 곳도 있으니 어떤형식으로 정리해야하는지 결정하고 준비하면 더 좋을 것 같다
-    
+  
       
   
 - DB 정리
@@ -72,10 +71,7 @@
 - 스프링 입문 강의 듣기
   - 오후 수업이후 다음주 부터 주5일 스프링 수업이 시작한다고 해서 다른 것들 다 제쳐 두고 빠르게 스프링 입문강의를 한번 들어놓기위해서 인강을 들었다
   - 처음에는 그냥듣다가 머리속에 남는게 없는 거같아서 주제별로 정리하면서 듣기 시작했는데 훨씬 효과가 좋다
-    - 뇌에서 손에서 땀이 나야 남는 것 같다 
-    - 
-
-
+    - 뇌에서 땀이 나야 학습이 된다는 말을 생각해본다
 
 - TIL 정리
   
@@ -85,9 +81,11 @@
 
 # 공부하면서 느낀점
 
-- 어제 공부하면서 공부가 너무 더딘것에 대해서 공부했는데 오늘 자료찾으러 방문한 다른사람의 TIL repo에서 **""중요한 것은 포기하지 않는 것. 더딘 것을 염려하지 말고, 멈출 것을 염려하자."** 라는 문구를 읽었고 용기를 얻게 되었다
+- 어제 공부하면서 공부가 너무 더딘것에 대해서 공부했는데 오늘 자료찾으러 방문한 다른사람의 TIL repo에서 **"중요한 것은 포기하지 않는 것. 더딘 것을 염려하지 말고, 멈출 것을 염려하자."** 라는 문구를 읽었고 용기를 얻게 되었다
+  
   - TIL repo : https://github.com/Gyubin/TIL
-- 
+  
+  
 
 
 
