--- a/TIL/11_2020/20201113-TIL.md
+++ b/TIL/11_2020/20201113-TIL.md
@@ -25,6 +25,8 @@
 - 모두의 네트워크
 
   -  오전에 케이블의 종류와 구조에 대해 읽었다
+     -  평소에 생각없이 사던 랜선에도 종류가 있음을 알게되었고 쿠팡에 들어가서 내가 사던 것이 저렴하고 신호방해가 잘 일어날수 있는 것임을 알게되었다
+     -  이렇게 눈으로 확인할 수 있는부분들을 더 이해도잘가고 공부하기가 좋은 것 같다. 이론만이 아니라 실습과 연결될 수 있는 부분 찾아보는게 공부 효과를 올리는 방법 같다.
 
     
 
@@ -49,7 +51,7 @@
 
 - 스프링 입문 강의 듣기
 
-  - 강의가 java11에서 진행되서 java11을 다운받고 프로젝트에 적용하는 것을 해보았는데 여러 java 환경에서 실행하는 실습을 해본것 같아서 도움이 된다
+  - 강의가 java11에서 진행되는데 나는8과 14밖에 없어서  java11을 다운받고 프로젝트에 적용하는 것을 해보았는데 여러 java 환경에서 실행하는 실습을 해본것 같아서 도움이 된다
 
     - 프로젝트 settins-project에서 Project SDK에서 java 버전을 선택해주고 Settings-Gradle에서 Gradle JVM에서도 설정해주면 된다
 
@@ -59,8 +61,6 @@
 
     
 
-  
-
 - TIL 정리 & 블로그 업데이트
 
   - 요즘 TIL말고는 다른 자료들은 업데이트을 못하고 있어 정리해서 좀 올릴필요가 있다
@@ -68,8 +68,8 @@
 
 - 학습매니저 상담
   - 학원생활에 어려운점들을 얘기하기 위해 학습매니저와 상담을 요청하고 상담을 받고왔다
-    - 학습하는 주변 환경을 만들기 위해 노력하고 있는 부분을 
-    - 학원과 나의 목표는 강의를 잘듣고 
+    - 학습하는 주변 환경을 만들기 위해 노력하고 있는 부분을 이야기 했는데 그것을 인정받는 기분이 들어서 맘이 한결 편해졌다
+    - 학원과 나의 목표는 강의를 잘듣고 빨리취직하는 것이라고 정리해주셨는데 명쾌한 정리라고 생각한다. 나도 내가 맞고 인정받는 것보다 그게 더 중요하다는걸 인정하고 맞는 행동을 해야될 것 같다
 
 # 공부하면서 느낀점
 
