데이터베이스연동

--- a/Spring/(강의)backendschool-spring/2_데이터베이스연동.md
+++ b/Spring/(강의)backendschool-spring/2_데이터베이스연동.md
@@ -41,9 +41,9 @@
 - 여러 곳에서 Request가 올때마다 Connetion을 열어둔 채로 두면 중복된 Resource가 사용됨으로 문제가 생길수 있어서 사용후 바로 close를 해주어야 한다
 - Conntion 뿐아니라 Statemnet와 ResultSet도 함께 close를 해주어야 한다
 
-
-
 ### 실습
+
+#### 데이터 베이스 연동 실습
 
 - H2 데이터베이스 설정 및 라이브러리 등록
 
@@ -90,8 +90,6 @@
 
     - 전체의 close를 한번에 try~catch를 하게 되면 앞선 항목이 예외가 발생할시 뒤에 Connetion이 close되지 않을 가능성이 있기 때문에 각각 try~catch를 해준다
 
-      
-
     
 
 - UpdatedBoardTest
@@ -117,4 +115,83 @@
 - GetBoardTest
 
   - 다른분은 GetBoardListTest와 똑같이 처리해 주고 while문으로 반복문으로 돌리던 rs.next()를 if 문으로 하나의 데이터만 추출해 상세정보를 출력하도록 검색 결과를 처리합니다
+
+#### Statement -> PreparedStatement
+
+테스트에서 Statement를 선언해서 사용하고 있었는데 그보다 향상된 성능에 PreparedStatement로 대체한다
+- Statment 로 선언된 변수를 PreparedStatement로 자료형을 바꿔준다
+
+- sql문을 statment 생성 이전에 작성한다
+
+  - sql문에 들어가는 입력 인자들을 모두 ? 로 바꾸어준다
+
+-  .createStatement로 생성하던 Statement를 .prepareStatment로 생성해주며 파라미터에 sql문을 넣는다
+
+- sql문에 들어갈 입력인자를 매핑해주기 위해 stmt.set\[자료형](index, 입력값)을 입력인자 갯수만큼 작성해준다
+
+- 이전과 같이 stmt.executeUpdate나 .executeQuery로 전송하지만 입력인자에 sql문을 입력하지 않는다
+
+  - sql문은 이미 preparedStatement를 생성할때 입력이 되어있다
+
+- 다른 Test에도 적용해 준다
+
+- 위에 실습에서 반복되서 작성되고 있는 부분들을 따로 빼서 반복을 줄여주는 작업을 진행한다
+
+  
+
+#### 중복코드 제거
+
+중복된 코드들을 담아줄 JDBCUtil 클래스를 com.rubypaper.biz.common 에 생성해준다
+
+- Test 클래스마다 중복해서 드라이버를 등록하고 Connetion을 받아오는 코드를 getConntion 메소드로 묶어 Conntion을 retun하도록 하여 JDBCUTill클래스에 작성한다
+
+- 자원을 회수하는 finally 이후에 구문을 묶어 close()메소드로 간소화해준다
+
+- 다른 테스트에 적용하여 하여준다
+
+  
+
+#### DAO(Data Access Object)
+
+각 테스트 클래스로 나누어져 있는 데이터 접근 기능들을 BoardDAO클래스 생성해서 정리한다
+
+- 각 테스트에서 사용한 Connection PreparedStatemnet ResultSet 변수를 선언한다
+- SQL 명령어들을 상수로 선언하여 명확히 구분될 수 있게 한다(ex BOARD_INSERT, BOAD_LIST)
+- insertBoard메소드를 만들고 파라미터로 String title, String writer, String content를 입력파라미터로 받는다
+  - stmt.setString(1, title); stmt.setString(1, writer);  stmt.setString(1, content);로 입력받은 값을 sql문에 담는다
+  - 그외에는 기존 코드와 같다
+- 나머지 테스드들에 나뉘어져 있던 코드들을 모두
+
+- 각 테스트 코드로 돌아가 BoardDAO를 객체를 생성하고 boardDAO.insertBoard로 해당 기능들을 실행시킨다
+
+  
+
+#### VO(Value Object)
+
+- DAO의 메서드로 데이터를 입력하거나 수정할 때 어떤 컬럼에 값을 입력하는지를 알수 없는 문제가 발생한다
+  - Table에 모든 컬럼을 변수로 가지고 있는 VO를 만들어 set메서드로 명시적으로 VO 객체에 데이터를 입력하고 해당 VO를 DAO 메서드에서 처리할 수 있도록 하여 문제를 해결한다
+- BoardVO 클래스를 만들고 private 으로 seq, title, writer, content, regDate, cnt, password 변수를 선언한다(테이블에 모든 컬럼)
+  - DB에서 컬럼명은 대소문자 구분이 없지만 변수로 활용하기 위해서 카멜케이스를 사용한다
+- 변수의 접근하기 위한 Getter와 Setter를 선언한다
+- BoardDAO 클래스에 메소드들의  입력파라미터를 모두 BoardVO vo로 변경하여주고 stmt.setString(1, wirter)와 같이 작성되있는 코드를 stmt.getString(1, vo.getWriter)와 같이 vo의 객체의 변수를 활용하도록 변경한다
+  - 입력 파라미터가 하나인 메소드는 비효율적으로 느낄 수 있지만 후에 입력 파라미터가 늘어날 수도 있고 또한 통일 성을 통한 가독성을 향상 시킬 수 있기 때문에 모두 VO 객체를 입력받도록 변경한다
+- 각 테스트 클래스로 돌아가 BoardVO 객체를 선언하고 그 밑에 필요한 입력파라미터를 vo.setWriter("작가") 와 같이 명시적으로 입력하여 준뒤 DAO객체의 입력파라미터에 vo객체를 넣어준다
+
+
+
+
+
+#### Lombok
+
+
+
+
+
+
+
+
+
+
+
+
 
