--- a/Spring/(강의)backendschool-spring/2_데이터베이스연동.md
+++ b/Spring/(강의)backendschool-spring/2_데이터베이스연동.md
@@ -174,7 +174,7 @@
   - DB에서 컬럼명은 대소문자 구분이 없지만 변수로 활용하기 위해서 카멜케이스를 사용한다
 - 변수의 접근하기 위한 Getter와 Setter를 선언한다
 - BoardDAO 클래스에 메소드들의  입력파라미터를 모두 BoardVO vo로 변경하여주고 stmt.setString(1, wirter)와 같이 작성되있는 코드를 stmt.getString(1, vo.getWriter)와 같이 vo의 객체의 변수를 활용하도록 변경한다
-  - 입력 파라미터가 하나인 메소드는 비효율적으로 느낄 수 있지만 후에 입력 파라미터가 늘어날 수도 있고 또한 통일 성을 통한 가독성을 향상 시킬 수 있기 때문에 모두 VO 객체를 입력받도록 변경한다
+  - 입력 파라미터가 하나인 메소드는 비효율적으로 느낄 수 있지만 후에 입력 파라미터가 늘어날 수도 있고 또한 직관성을 통한 가독성을 향상 시킬 수 있기 때문에 모두 VO 객체를 입력받도록 변경한다
 - 각 테스트 클래스로 돌아가 BoardVO 객체를 선언하고 그 밑에 필요한 입력파라미터를 vo.setWriter("작가") 와 같이 명시적으로 입력하여 준뒤 DAO객체의 입력파라미터에 vo객체를 넣어준다
 
 
@@ -182,6 +182,37 @@
 
 
 #### Lombok
+
+- VO에 변수가 추가되거나 변경되었을 경우 유지보수의 어려움이 생길 수 있는 문제상황이 있다
+- 이를 해결하기 위해 Lombok 라이브러리를 외부라이브러리로 추가한다
+  - Lombok은 getter setter 외에 필수적인 메소드들을 에노테이션으로 입력하여 관리해주는 라이브러리이다
+  - 이후에 변수를 추가하거나 변경하여도 자동으로 관련된 메소드들을 추가해주거나 변경해준다
+
+#### DAO Get, GetList기능 분화
+
+- getBoard()와 getBoardList() 메소드의 경우 바로 값을 출력하게 되어 있는데 바람직한 설계가 아니다
+  - 해당 메소드들은 값을 출력해주면 해당메소드들을 사용하는 클라이언트가 해당 값을 필요한 모습으로 가공하여 사용하는 것이 더 바람직한 설계이다
+- getBoardlIst()에 List\<BoardVO>를 만들어주고 ArrayList에 add메소드를 통해 BoardVO 객체들을 담아주어서 boardList를 return하도록 한다
+  - 해당 list는 toString을 통해 출력할 수도있고 size()를 통해 리스트의 갯수를 체크할 수도있고 클라이언트의 사용의도에 따라 사용할 수 있다
+- getBoard 메소드도 새로운 boad객체를 만들어 set메소드들을 통해 상세조회한 객체의 값을 객체에 담아 return할 수 있다
+  - 해당 메소드도 클라이언트에서 가공해서 사용할 수 있게 된다.
+
+
+
+### 상세조회시 조회수(CNT)증가
+
+- 상세 조회시 조회수를 CNT 컬럼의 값을 1증가시키기 위해 BoardDAO에 새로운 변수 BOaRD_UPDATE_CNT를 추가한다
+  - "UPDATE board SET cnt = cnt +1 WHERE seq = ?" 를 입력해주어 해당 번호에 cnt에 값을 +1 하도록 해준다
+- 따로 메소드를 만들기 보다는 getBoard()에서만 사용될 것이기 때문에 if(rs.next)문안에 board를 모두 set한다음에 새로운 stmt를 생성하여 BOARD_UPDATE_CNT를 담고 set되어 있는 vo에서 getSeq()를 통해 입력파라미터에 값을 입력하여 execueteUpdate()한다
+- 테스트에서 getBoard한 결과 한번 조회가 끝난이후에 cnt가 +1된 것을 확인할 수 있다
+
+### UserDAO, UserVO 생성
+
+- 나중에 게시판에서 사용할 UserDAO와 UserVO도 작성하여 기존의 BoardDAO와 BoadVO와 같은 형식으로 작성하여 주었다
+
+
+
+
 
 
 
