--- a/Reading/독서리스트.md
+++ b/Reading/독서리스트.md
@@ -1,4 +1,6 @@
-# 읽고싶은책
+# 독서 리스트
+
+## 읽고싶은책
 
 - HTTP 완벽가이드 - 데이브 고울리
   - http://www.yes24.com/Product/Goods/15381085?OzSrank=1
@@ -12,15 +14,29 @@
   - http://www.yes24.com/Product/Goods/89649360?OzSrank=1
 - 클린코드 - 로버트 C. 마틴
   - http://www.yes24.com/Product/Goods/11681152?OzSrank=1
+- 스프링 부트와 AWS로 혼자 구현하는 웹 서비스 - 이동욱
+  - http://www.yes24.com/Product/Goods/83849117
+- Real MySQL - 이성욱
+  - http://www.yes24.com/Product/Goods/6960931?OzSrank=1
+- 대규모 서비스를 지탱하는 기술 - 이토 나오야
+  - http://www.yes24.com/Product/Goods/4667932
+- 그림으로 배우는 HTTP & Network - 우에노 센
+  - http://www.yes24.com/Product/Goods/15894097?OzSrank=1
+- 스프링 인 액션 - 크레이그 월즈
+  - http://www.yes24.com/Product/Goods/90180239?OzSrank=2
+- 해커와 화가 - 폴 그레이엄
+  - http://www.yes24.com/Product/Goods/11775130?OzSrank=1
+- 코딩인터뷰 완전분석 - 게일 라크만 맥도웰
+  - http://www.yes24.com/Product/Goods/44305533
 
-# 읽고 있는 책
+## 읽고 있는 책
 
 - 모두의 네트워크 - 미즈구치 카츠야
   - http://www.yes24.com/Product/Goods/61794014?OzSrank=1
 - 프로그래머의 길, 멘토에게 묻다 - 데이브 후버, 에디웨일 오시나이
   - http://www.yes24.com/Product/Goods/4045732
 
-# 읽은 책
+## 읽은 책
 
 - 인문학도, 개발자 되다 - 마르코
   - http://www.yes24.com/Product/Goods/67015072?OzSrank=1
